# typedb-structure-python

./: .gitignore  pyproject.toml  readme.md
src/typedb_graphs_python/: data_constraint.py  matplotlib_visualizer.py  networkx_builder.py
tests/: test_simple.py
