[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typedb-graph-visualizer-example"
version = "0.0.1"
description = "TypeDB graph visualization example"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Krishnan Govindraj", email = "krishnan@typedb.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "typedb-driver~=3.7.0-rc3",
    "networkx~=3.2.1",
    "matplotlib~=3.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.4.2",
    "build~=1.3.0"
]

[project.urls]
"Repository" = "https://github.com/typedb-osi/typedb-visualization-python"
"Release notes" = "https://github.com/typedb-osi/typedb-visualization-python/blob/master/RELEASE_NOTES.md"
"TypeDB" = "https://github.com/typedb/typedb"
"Vaticle" = "https://typedb.com/"
